<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/frgment_pictureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_EditLabel"
            android:textSize="25sp"

            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="15sp"
            />

        <ImageView
            android:id="@+id/fragment_profileImageEdit"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/image_defaultpic"
            android:clickable="true"
            android:focusable="true"
            android:onClick="selectNewPicture"

            android:layout_below="@id/frgment_pictureTextView"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/fragment_nameTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_textView"
            android:textSize="25sp"

            android:layout_below="@id/fragment_profileImageEdit"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/fragment_ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_textView"
            android:textSize="25sp"

            android:layout_below="@id/fragment_nameTextText"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/fragment_sexTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_textView"
            android:textSize="25sp"

            android:layout_below="@id/fragment_ageTextView"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/fragment_descTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_textView"
            android:textSize="25sp"

            android:layout_below="@id/fragment_sexTextView"
            android:layout_margin="20dp"
            />

        <EditText
            android:id="@+id/fragment_nameEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_name_editText"
            android:textSize="25sp"
            android:maxLines="1"
            android:maxLength="15"

            android:gravity="center"
            android:layout_below="@id/fragment_profileImageEdit"
            android:layout_toEndOf="@id/fragment_nameTextText"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            />

        <EditText
            android:id="@+id/fragment_ageEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_an_age_editText"
            android:textSize="25sp"
            android:maxLines="1"
            android:maxLength="15"
            android:inputType="numberDecimal"

            android:gravity="center"
            android:layout_below="@id/fragment_nameEditText"
            android:layout_toEndOf="@id/fragment_ageTextView"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            />

        <Spinner
            android:id="@+id/fragment_sexSpinner"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:entries="@array/sex_array"
            android:prompt="@string/sex_prompt"

            android:layout_below="@id/fragment_ageEditText"
            android:layout_toEndOf="@id/fragment_sexTextView"
            android:layout_marginTop="40dp"
            >
        </Spinner>


        <EditText
            android:id="@+id/fragment_descEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_description_editText"
            android:textSize="15sp"
            android:maxLines="7"

            android:layout_below="@id/fragment_descTextView"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />

        <Button
            android:id="@+id/fragment_saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:background="@android:color/holo_green_dark"
            android:onClick="saveAttributes"

            android:layout_below="@id/fragment_descEditText"
            android:layout_centerInParent="true"
            android:layout_margin="15dp"
            />


    </RelativeLayout>
</ScrollView>


